# Meta_hackathon_Team_Technovators

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  push_error.txt  pyproject.toml  remotes.txt  requirements.txt  status.txt  test_env.py  validate.py  validation_output.txt  validation_results.json
app/: __init__.py  baseline.py  env.py  graders.py  main.py  models.py  policies.py  tasks.py  utils.py
data/: easy_billing.json  hard_security.json  medium_refund.json
server/: app.py
